[package]
name = "can_modbus_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] } # Use "full" for simplicity, includes rt-multi-thread, macros, sync, time, net, io-util
socketcan = "3.5.0"
tokio-modbus = { version = "0.16.1", features = ["tcp-server", "tcp"] }
thiserror = "2.0.12" # For custom error types
log = "0.4.27"
env_logger = "0.11.8"
rppal = "0.22.1"
crossbeam_channel = "0.5.15"